<?xml version="1.0"?>
<package format="3">
  <name>revopoint_camera</name>
  <version>0.1.0</version>
  <description>ROS 2 driver using the vendor 3DCamera SDK.</description>
  <maintainer email="ccyen@umich.edu">Chia-Ching Yen</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
